fix: text alignment of featured products carousel (#473)

--- a/blocks/featured-products-carousel/featured-products-carousel.css
+++ b/blocks/featured-products-carousel/featured-products-carousel.css
@@ -15,6 +15,10 @@ main .featured-products-carousel .carousel-item {
   border: 3px solid #efefef;
 }
 
+main .featured-products-carousel .carousel-item-text {
+  text-align: left;
+}
+
 main .featured-products-carousel.grey .carousel-item {
   background-color: #f2f2f2;
   border: 0;
